# ZiggySpiderProtocol

./: AGENTS.md  README.md  build.zig  build.zig.zon
.github/workflows/: ci.yml  codex-review-gate.yml
docs/: NAMESPACE_DRIVER_ABI_V1.md  README.md  overview.md
docs/protocols/: namespace-driver-abi-v1.md  unified-v2-control.md
sdk/rust/spiderweb-protocol/: Cargo.toml  README.md
sdk/rust/spiderweb-protocol/examples/: control_connect.rs  control_version.rs  fs_hello.rs  workspace_bind_set.rs
sdk/rust/spiderweb-protocol/src/: generated.rs  lib.rs  protocol.rs  websocket.rs
sdk/rust/spiderweb-protocol/tests/: protocol_test.rs
sdk/spec/: protocol.json
src/: lib.zig  protocol_response.zig  sdk_artifacts.zig  sdk_schema.zig  unified.zig  unified_build.zig  unified_parse.zig  unified_types.zig
src/spiderweb_fs/: fs_client.zig  lib.zig  websocket_transport.zig
src/spiderweb_node/: chat_job_index.zig  chat_job_types.zig  chat_runtime_exec.zig  fs_local_source_adapter.zig  fs_node_main.zig  fs_node_ops.zig  fs_node_server.zig  fs_node_service.zig  fs_watch_runtime.zig  fs_windows_source_adapter.zig  lib.zig  namespace_driver.zig  node_capability_providers.zig  plugin_loader_native.zig  plugin_loader_process.zig  plugin_loader_wasm.zig  service_manifest.zig  service_runtime_host.zig  service_runtime_manager.zig  spider_venom_wasm_abi.zig  spider_venom_wasm_host.zig  venom_catalog.zig  venom_contracts.zig  venom_manifest.zig  venom_package.zig  venom_runtime_manager.zig  wasm_chat_backend.zig  wasm_host_adapter.zig  zwasm_runtime.zig
(+9 files in other folders)
