[package]
name = "spiderweb-protocol"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
websocket = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
